Fix footer overflow

--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -31,6 +31,8 @@ body {
 }
 
 .root {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
